Refactoring swagger syntax
